# beautiful-life

./: CMakeLists.txt  lifemainwindow.cpp  lifemainwindow.h  lifeuniverse.cpp  lifeuniverse.h  main.cpp
